argocd-managed/oscarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-files
spec:
  selector:
    matchLabels:
      app: static-files
  replicas: 2
  template:
    metadata:
      labels:
        app: static-files
    spec:
      automountServiceAccountToken: false
      containers:
        - name: sws
          image: ghcr.io/static-web-server/static-web-server:2.44.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-files
              mountPath: /public/static-files
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "10m"
              memory: "16Mi"
          args:
            - --root=/public
            - --log-level=info
            - --disable-symlinks=false
            - --health
          livenessProbe:
            httpGet:
              path: /health
              port: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: static-files
          configMap:
            name: static-files
