argocd-managed/oscarr/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: static-files
spec:
  selector:
    app: static-files
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: security-txt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Path(`/.well-known/security.txt`)
      kind: Rule
      priority: 1000 # high prio to overwrite any ingressroute
      middlewares:
        - name: security-txt-redirect
        - name: security-txt-replacepath
        - name: security-headers
      services:
        - name: static-files
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-txt-redirect
spec:
  redirectRegex:
    regex: .*
    replacement: https://oscarr.nl/.well-known/security.txt
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-txt-replacepath
spec:
  replacePath:
    path: "/static-files/security.txt"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keybase-txt
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`oscarr.nl`) || Host(`0scar.nl`) || Host(`devopscar.nl`)) && (Path(`/.well-known/keybase.txt`) || Path(`/keybase.txt`))
      priority: 1000
      kind: Rule
      middlewares:
        - name: keybase-txt-redirect
        - name: keybase-txt-replacepath
        - name: security-headers
      services:
        - name: static-files
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keybase-txt-redirect
spec:
  redirectRegex:
    regex: https://(.*).nl/keybase.txt
    replacement: https://${1}.nl/.well-known/keybase.txt
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keybase-txt-replacepath
spec:
  replacePath:
    path: "/static-files/keybase.txt"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hackerman
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`77.171.172.211`)
      kind: Rule
      middlewares:
        - name: hackerman
      services:
        - name: static-files
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hackerman
spec:
  replacePath:
    path: /static-files/hackerman.html
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
spec:
  headers:
    stsSeconds: 31536000
    # stsIncludeSubdomains: true
    # stsPreload: true
    # generated with https://report-uri.com/home/generate
    contentSecurityPolicy: default-src 'none'; img-src 'self'; frame-ancestors 'none'; form-action 'none'; base-uri 'none'
    referrerPolicy: no-referrer
    contentTypeNosniff: true
    frameDeny: true
    # generated with https://www.permissionspolicy.com/
    permissionsPolicy: accelerometer=(), ambient-light-sensor=(), autoplay=(), battery=(), camera=(), cross-origin-isolated=(), display-capture=(), document-domain=(), encrypted-media=(), execution-while-not-rendered=(), execution-while-out-of-viewport=(), fullscreen=(), geolocation=(), gyroscope=(), keyboard-map=(), magnetometer=(), microphone=(), midi=(), navigation-override=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), web-share [...]
