argocd-managed/oscarr/security-txt.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-txt
spec:
  selector:
    matchLabels:
      app: security-txt
  replicas: 2
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: security-txt
    spec:
      containers:
        - name: nginx
          image: joseluisq/static-web-server:2.16.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: security-txt
              mountPath: /public/.well-known/
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "10m"
              memory: "16Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
      volumes:
        - name: security-txt
          configMap:
            name: security-txt
            items:
            - key: security.txt
              path: security.txt
---
apiVersion: v1
kind: Service
metadata:
  name: security-txt
spec:
  selector:
    app: security-txt
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: security-txt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Path(`/.well-known/security.txt`)
      kind: Rule
      priority: 100 # high prio to overwrite any ingressroute
      middlewares:
        - name: security-txt
        - name: security-headers
      services:
        - name: security-txt
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-txt
spec:
  redirectRegex:
    regex: .*
    replacement: https://oscarr.nl/.well-known/security.txt
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    # stsPreload: true
    # generated with https://report-uri.com/home/generate
    contentSecurityPolicy: default-src 'none'; img-src 'self'; frame-ancestors 'none'; form-action 'none'; base-uri 'none'
    referrerPolicy: strict-origin
    contentTypeNosniff: true
    frameDeny: true
    # generated with https://www.permissionspolicy.com/
    permissionsPolicy: accelerometer=(), ambient-light-sensor=(), autoplay=(), battery=(), camera=(), cross-origin-isolated=(), display-capture=(), document-domain=(), encrypted-media=(), execution-while-not-rendered=(), execution-while-out-of-viewport=(), fullscreen=(), geolocation=(), gyroscope=(), keyboard-map=(), magnetometer=(), microphone=(), midi=(), navigation-override=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), web-share [...]
